# cryptdo

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  Gopkg.toml  LICENSE  README  WORKSPACE  bats.bzl  crypto.go  crypto_test.go  fuzz.go  passphrase.go  roundtrip_test.go  versions.go  versions_test.go
cmd/cryptdo/: BUILD  BUILD.bazel  main.go
cmd/cryptdo-bootstrap/: BUILD.bazel  main.go
cmd/cryptdo-filter/: BUILD  BUILD.bazel  main.go
cmd/cryptdo-rekey/: BUILD.bazel  main.go
cryptdo/: BUILD.bazel  crypto.go  crypto_test.go  passphrase.go  roundtrip_test.go  versions.go  versions_test.go
cryptdo/cmd/cryptdo/: BUILD.bazel  main.go
cryptdo/cmd/cryptdo-bootstrap/: BUILD.bazel  main.go
cryptdo/cmd/cryptdo-filter/: BUILD.bazel  main.go
cryptdo/cmd/cryptdo-rekey/: BUILD.bazel  main.go
cryptdo/cryptdopb/: BUILD.bazel  cryptdo.proto
cryptdo/internal/flag/: BUILD.bazel  ext.go  ext_test.go
cryptdo/testdata/: README.txt  encrypt-this.txt
cryptdopb/: BUILD.bazel  cryptdo.pb.go  cryptdo.proto  gen.go
proto/: BUILD  cryptdo.proto
test/: BUILD.bazel  core.bats  ext.bats  rekey.bats  smoke.bats
testdata/: 1_0.txt.enc
tools/: bats.bzl  bazel.rc  deps.sh  install.sh  release.sh  test.sh
