load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_prefix")

go_prefix("code.xoeb.us/cryptdo")

gazelle(
    name = "gazelle",
    command = "fix",
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "cryptdo",
    srcs = [
        "//cryptdo/cmd/cryptdo",
        "//cryptdo/cmd/cryptdo-bootstrap",
        "//cryptdo/cmd/cryptdo-filter",
        "//cryptdo/cmd/cryptdo-rekey",
    ],
    extension = "tgz",
    mode = "0755",
)

