load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "code.xoeb.us/cryptdo",
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "cryptdo",
    srcs = [
        "//cryptdo/cmd/cryptdo",
        "//cryptdo/cmd/cryptdo-bootstrap",
        "//cryptdo/cmd/cryptdo-rekey",
    ],
    extension = "tgz",
    mode = "0755",
)
