load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crypto.go",
        "passphrase.go",
        "versions.go",
    ],
    importpath = "code.xoeb.us/cryptdo/cryptdo",
    visibility = ["//visibility:public"],
    deps = [
        "//cryptdo/cryptdopb:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/golang.org/x/crypto/pbkdf2:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "crypto_test.go",
        "roundtrip_test.go",
        "versions_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cryptdo/cryptdopb:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
    ],
)
