load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cryptdo.pb.go"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//proto:go_default_library"],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["cryptdo.proto"],
    visibility = ["//visibility:public"],
)
