load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cryptdo_proto",
    srcs = ["cryptdo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_default_library",
    proto = ":cryptdo_proto",
    visibility = ["//visibility:public"],
)
