load("//tools:bats.bzl", "bats_test")

bats_test(
    name = "core",
    size = "small",
    srcs = [
        "core.bats",
    ],
    deps = [
        "//cryptdo/cmd/cryptdo",
        "//cryptdo/cmd/cryptdo-bootstrap",
        "//cryptdo/cmd/cryptdo-rekey",
    ],
)

bats_test(
    name = "ext",
    size = "small",
    srcs = [
        "ext.bats",
    ],
    deps = [
        "//cryptdo/cmd/cryptdo",
        "//cryptdo/cmd/cryptdo-bootstrap",
        "//cryptdo/cmd/cryptdo-rekey",
    ],
)

bats_test(
    name = "rekey",
    size = "small",
    srcs = [
        "rekey.bats",
    ],
    deps = [
        "//cryptdo/cmd/cryptdo",
        "//cryptdo/cmd/cryptdo-bootstrap",
        "//cryptdo/cmd/cryptdo-rekey",
    ],
)

