load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "code.xoeb.us/cryptdo/cryptdo/cmd/cryptdo-bootstrap",
    visibility = ["//visibility:private"],
    deps = [
        "//cryptdo:go_default_library",
        "//cryptdo/internal/flag:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
    ],
)

go_binary(
    name = "cryptdo-bootstrap",
    embed = [":go_default_library"],
    importpath = "code.xoeb.us/cryptdo/cryptdo/cmd/cryptdo-bootstrap",
    visibility = ["//visibility:public"],
)
