load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ext.go"],
    importpath = "code.xoeb.us/cryptdo/cryptdo/internal/flag",
    visibility = ["//cryptdo:__subpackages__"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["ext_test.go"],
    embed = [":go_default_library"],
    importpath = "code.xoeb.us/cryptdo/cryptdo/internal/flag",
)
